2017-09-19  Jean-Louis Martineau <JMartineau@carbonite.com>
	* common-src/amutil.c (ambind): Close fds before forking ambind
	* client-src/client_util.c, client-src/selfcheck.c,
	  client-src/senddiscover.c, common-src/ammessage.c,
	  common-src/amxml.c, common-src/security-util.c,
	  server-src/amcheck.c, server-src/driver.c,
	  server-src/server_util.c,
	  server-src/xfer-dest-holding.c: Fix small memory leak
	* ndmp-src/ndml_conn.c: Comment a memory leak

2017-09-18  Jean-Louis Martineau <JMartineau@carbonite.com>
	* common-src/amutil.c (parse_crc): Set to 0 on error
	* perl/Amanda/Restore.pm: Modify a copy of the header

2017-09-18  Jean-Louis Martineau <JMartineau@carbonite.com>
	* application-src/amsuntar.pl: Typo

2017-09-15  Jean-Louis Martineau <JMartineau@carbonite.com>
	* perl/Amanda/ScanInventory.pm: Call release with need_another flag.
	* perl/Amanda/Changer/single.pm (do_release): eject the tevice if
	  need_another

2017-09-15  Jean-Louis Martineau <JMartineau@carbonite.com>
	* perl/Amanda/ScanInventory.pm (after_poll): Set $remove_undef_state
	  if $self->{'chg'}->{'scan-require-update'}

2017-09-12  Jean-Louis Martineau <JMartineau@carbonite.com>
	* server-src/dumper.c:i Do not cancel the shm_ring if the dump-result
	  is 1 (STRANGE)

2017-09-11  Jean-Louis Martineau <JMartineau@carbonite.com>
	* client-src/sendsize.c: If application return '-2 -2' for the
	  size, then report -2 to the server

2017-09-08  Jean-Louis Martineau <JMartineau@carbonite.com>
	Add timestmap in the req OPTION line
	Run script support command
	Add the --timestmap argument to scripts and applications
	* amandad-src/amandad.h (g_option_t): Add timestamp
	* amandad-src/amandad_util.c (parse_g_options): Parse timestamp in the
	  OPTION line
	* application-src/amgtar.c,
	  application-src/amlog-script.pl:Add timestamp
	* application-src/script-fail.sh: Add support command
	* client-src/client_util.c: Move backup_support_option to
	  common-src/backup_support_option.c